[package]
name = "llmrouter"
version = "3.3.0"
edition = "2021"
authors = ["Danny Boland <danny@boland.dev>"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time", "sync", "io-util"] }
http = "1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }
http-body-util = "0.1"
http-body = "1"
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "rustls-no-provider"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
bytes = "1"
futures-util = "0.3"
anyhow = "1"
shellexpand = { version = "3", default-features = false, features = ["base-0"] }
dotenvy = "0.15"
prometheus = { version = "0.14", default-features = false }
gcp_auth = "0.12"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
