[package]
name = "llmrouter"
version = "4.2.0"
edition = "2021"
authors = ["Danny Boland <danny@boland.dev>"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time", "sync", "io-util"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }
http-body-util = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "rustls-no-provider"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
bytes = "1"
futures-util = "0.3"
anyhow = "1"
shellexpand = { version = "3", default-features = false, features = ["base-0"] }
dotenvy = "0.15"
prometheus = { version = "0.14", default-features = false }
gcp_auth = "0.12"
uuid = { version = "1", features = ["v4"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
# No unsafe in this codebase; keep it that way.
unsafe_code = "forbid"

[lints.clippy]
# Leftover/placeholder code must never ship.
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
# Guard against waste / over-engineering.
redundant_clone = "warn"
unnecessary_wraps = "warn"
needless_pass_by_value = "warn"
# Force intentional numeric conversions that can corrupt a value.
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_lossless = "warn"
# Discourage silent panics in prod (allowed in tests; see lib.rs).
unwrap_used = "warn"
expect_used = "warn"
# Keep stray output out of structured logs (banner is TTY-gated; see main.rs).
print_stderr = "warn"
print_stdout = "warn"
# Minor hygiene.
semicolon_if_nothing_returned = "warn"
manual_let_else = "warn"

[profile.release]
lto = true
strip = true
