[package]
name = "llmrouter-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
llmrouter = { path = ".." }
serde_json = "1"
toml = "1"

[[bin]]
name = "extract_json"
path = "fuzz_targets/extract_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "differential"
path = "fuzz_targets/differential.rs"
test = false
doc = false
bench = false

[[bin]]
name = "config_load"
path = "fuzz_targets/config_load.rs"
test = false
doc = false
bench = false

[workspace]
